--- a/event_manager/requirements.txt
+++ b/event_manager/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.7.2
 Django==4.2
+django-filter==24.1
+django-phonenumber-field==7.3.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
+phonenumberslite==8.13.31
 pillow==10.2.0
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
